<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.disney.groovity</groupId>
	<artifactId>groovity-parent</artifactId>
	<packaging>pom</packaging>
	<version>2.1.0-beta.2-SNAPSHOT</version>
	<name>Groovity parent project</name>
	<description>
		Groovity is a JVM-based scripting language and runtime that can be
		used to develop everything from simple utility scripts to modular
		Servlet 3.0 applications.
	</description>
	<url>https://github.com/disney/groovity</url>
	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>Primary project license</comments>
		</license>
		<license>
			<name>Common Development and Distribution License</name>
			<url>https://oss.oracle.com/licenses/CDDL-1.1</url>
			<distribution>repo</distribution>
			<comments>License for code borrowed from JAX-RS and Jersey</comments>
		</license>
		<license>
			<name>The MIT License</name>
			<url>https://opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
			<comments>License for included jQuery and MimeParse utilities</comments>
		</license>
		<license>
			<name>The 3-Clause BSD License</name>
			<url>https://opensource.org/licenses/BSD-3-Clause</url>
			<distribution>repo</distribution>
			<comments>License for included CryptoJS utility</comments>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Alex Vigdor</name>
			<organization>Disney | ABC Television Group</organization>
			<roles>
				<role>developer</role>
			</roles>
			<email />
		</developer>
	</developers>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<groovy.version>3.0.21</groovy.version>
		<spring.version>5.3.31</spring.version>
		<jetty.version>9.4.53.v20231009</jetty.version>
		<http.client.version>4.5.14</http.client.version>
		<bouncycastle.version>1.70</bouncycastle.version>
		<servlet.api.version>3.1.0</servlet.api.version>
		<h2database.version>1.4.200</h2database.version>
		<shade.plugin.version>3.5.1</shade.plugin.version>
	</properties>
	<modules>
		<module>uri-parcel</module>
		<module>http-auth</module>
		<module>groovity-core</module>
		<module>groovity-websocket</module>
		<module>groovity-servlet</module>
		<module>groovity-error-page</module>
		<module>groovity-servlet-admin</module>
		<module>groovity-servlet-container</module>
		<module>groovity-jar-runner</module>
		<module>groovity-sample-jar</module>
		<module>groovity-maven-plugin</module>
		<module>groovity-integration-tests</module>
		<module>groovity-hello-world</module>
		<module>groovity-events</module>
		<module>groovity-crypto</module>
		<module>groovity-data</module>
		<module>groovity-data-service</module>
		<module>groovity-sql</module>
		<module>groovity-standalone</module>
		<module>groovity-sample-webapp</module>
		<module>groovity-portal</module>
		<module>groovity-sample-portal</module>
		<module>groovity-elasticsearch</module>
	</modules>
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<source>17</source>
						<target>17</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<executions>
							<execution>
								<id>aggregate</id>
								<goals>
									<goal>aggregate</goal>
								</goals>
								<phase>site</phase>
								<configuration>
									<sourceFileExcludes>
										<sourceFileExclude>Stub.java</sourceFileExclude>
									</sourceFileExcludes>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
					</plugin>
				</plugins>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>build-helper-maven-plugin</artifactId>
							<version>3.0.0</version>
							<executions>
								<execution>
									<id>add-source</id>
									<phase>generate-sources</phase>
									<goals>
										<goal>add-source</goal>
									</goals>
									<configuration>
										<sources>
											<source>${project.basedir}/src/main/groovity/</source>
										</sources>
									</configuration>
								</execution>
							</executions>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-release-plugin</artifactId>
							<version>2.5.3</version>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-source-plugin</artifactId>
							<version>3.3.0</version>
							<executions>
								<execution>
									<id>attach-sources</id>
									<goals>
										<goal>jar</goal>
									</goals>
								</execution>
							</executions>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-javadoc-plugin</artifactId>
							<version>3.6.3</version>
							<executions>
								<execution>
									<id>attach-javadocs</id>
									<goals>
										<goal>jar</goal>
									</goals>
								</execution>
							</executions>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-gpg-plugin</artifactId>
							<version>1.6</version>
							<executions>
								<execution>
									<id>sign-artifacts</id>
									<phase>verify</phase>
									<goals>
										<goal>sign</goal>
									</goals>
								</execution>
							</executions>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
	</profiles>
	<scm>
		<connection>scm:git:ssh://git@github.com/disney/groovity.git</connection>
		<url>https://github.com/disney/groovity</url>
		<tag>HEAD</tag>
	</scm>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>
</project>
